# rtext

./: Cargo.toml  README.md
src/: check_file_exists.rs  format_time.rs  main.rs  process_command.rs
