[package]
name = "rtext"
version = "0.1.3"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
colored = "2.1.0"
compound_duration = "1.2.1"
dialoguer = "0.11.0"
indicatif = "0.17.8"
num-format = "0.4.4"
random_word = { version = "0.4.3", features = ["en"] }
